add colour / faction / username autocomplete for faction_color options